Add account message rate limiter
